# icu-event-pretraining-mini

./: .gitignore  README.md  pyproject.toml
.data/: eicu_demo_headers.md  eicu_demo_sqlite.md
configs/experiments/: exp_00_logistic_basic.yaml  exp_00_logistic_full.yaml  exp_01_logistic_timegap.yaml  exp_01_scratch_full.yaml  exp_02_pretrained_full.yaml  exp_02_scratch_basic.yaml  exp_03_pretrained_ablation.yaml  exp_03_scratch_timegap.yaml  exp_04_hospital_grouped.yaml  exp_04_scratch_timegap_static.yaml  exp_05_fedavg.yaml  exp_05_pretrain_basic.yaml  exp_06_pretrain_timegap.yaml  exp_07_pretrain_timegap_static.yaml  exp_suite_core.yaml
configs/fedavg/: eicu_demo_fedavg_sim.yaml
configs/final/: eicu_demo_final_tiny.yaml
configs/tuning/: optuna_eicu_tiny.yaml
data/: README.md
docs/: application_note.md  data_statement.md  dataset_vs_plan_audit.md  experiment_protocol.md  limitations.md  model_card.md  plan.md  tdd_task_cards.md
graphify-out/: GRAPH_REPORT.md  graph.html  graph.json
results/: README.md
results/fedavg/: fedavg_metrics.json
scripts/: finetune_outcome.py  make_report_assets.py  prepare_eicu_demo.py  pretrain.py  run_baselines.py  run_experiment.py  run_experiment_suite.py  run_fedavg_sim.py  run_memorisation_probe.py  run_optuna_tuning.py  run_pseudoclient_eval.py
tests/: conftest.py  test_config_validation.py  test_eicu_demo_loader.py  test_event_builder_categorical.py  test_event_contracts.py  test_event_stream_builder.py  test_numeric_discretization.py  test_outcome_extraction.py  test_package_sanity.py  test_prepare_eicu_demo_cli.py
(+30 files in other folders)
